# autogen

./: .gitignore  OAI_CONFIG_LIST.json  pyproject.toml  search-index.json
architecture/: Notes.md  architecture.drawio
autogen/: __init__.py  db_utils.py  messages_storage.py  server.py
autogen/agentchat/: __init__.py  assistant_agent.py  conversable_agent.py  tool.py
autogen/agentchat/contrib/: retrieve_user_proxy_agent.py
autogen/agentchat/distributed/: README.md  assistant_agent.py  conversable_agent.py  groupchat.py  message.py  user_proxy_agent.py
autogen/oai/: completion.py
autogen/tools/: __init__.py  chroma_db.py  python_code.py  shell.py
database/: Dockerfile  README.md
database/init-db.d/: mongo-init.js
message_broker/: Dockerfile  README.md  nats.conf
my/: README.md  __init__.py  script0.py  script1.py  script2-web-search.py  script2.py  script3-vector-db.py  script4-user-proxy-run-code.py  script5-function-calls.py  script6-2+2-agents-2.py  script6-2+2-agents.py  script7-groupChat-1.py
my/distributed-script-0/: my-assistant.py  my-groupchat.py  my-user_proxy.py
my/distributed-script-7/: my_assistant1.py  my_assistant2.py  my_groupchat.py  my_user_proxy.py  variables.env
my/multi-process-1/: my_assistant.py  my_user_proxy.py
temp_dir/: plot_stock_price.py
